Fixing layout issues

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -183,8 +183,8 @@
     overflow: hidden;
   }
   .zx9__image{
-    max-width: 25.63963rem;
-    height: 30.8125rem;
+    max-width: unset;
+    width: 25.63963rem;
     margin: 6rem 0 -1rem 7.34rem;
   }
   .zx9__content{
